--- a/docker/speech-recognition.rnnt/Dockerfile.ubuntu-16.04
+++ b/docker/speech-recognition.rnnt/Dockerfile.ubuntu-16.04
@@ -10,18 +10,28 @@ ENTRYPOINT ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip, unzip.
+# Python needs: libssl-dev, libffi-dev, libbz2-dev.
 # Speech Recognition program needs: sndfile-devel.
 ENV DEBIAN_FRONTEND="noninteractive" 
 RUN apt update -y\
  && apt install -y apt-utils\
  && apt upgrade -y\
  && apt install -y\
- python3 python3-pip\
  gcc g++\
  make patch vim\
  git wget zip libz-dev\
+ libssl-dev libffi-dev libbz2-dev \
  libsndfile1-dev\
  && apt clean
+
+# Install Python 3.7. (If upgrading to 3.8 or higher, also change CK_PYTHON below.)
+ENV PYTHON_VERSION=3.7.8
+RUN cd /usr/src \
+ && wget https://www.python.org/ftp/python/${PYTHON_VERSION}/Python-${PYTHON_VERSION}.tgz \
+ && tar xzf Python-${PYTHON_VERSION}.tgz \
+ && rm Python-${PYTHON_VERSION}.tgz \
+ && cd /usr/src/Python-${PYTHON_VERSION} && ./configure --enable-optimizations && make altinstall \
+ && rm -rf /usr/src/Python-${PYTHON_VERSION}*
 
 # Create non-root user.
 RUN useradd --create-home --user-group --shell /bin/bash dvdt
@@ -33,7 +43,7 @@ ENV CK_ROOT=/home/dvdt/CK \
     CK_REPOS=/home/dvdt/CK_REPOS \
     CK_TOOLS=/home/dvdt/CK_TOOLS \
     PATH=${CK_ROOT}/bin:/home/dvdt/.local/bin:${PATH} \
-    CK_PYTHON=python3 \
+    CK_PYTHON=python3.7 \
     CK_CC=gcc \
     GIT_USER="dividiti" \
     GIT_EMAIL="info@dividiti.com" \
@@ -79,11 +89,9 @@ RUN ck install package --tags=python-package,pandas
 RUN ck install package --tags=python-package,absl
 RUN ${CK_PYTHON} -m pip install --user wheel
 # Install other program dependencies.
-# NB: llvmlite is unvailable for Python 3.5 from 0.32.0: https://github.com/numba/llvmlite/issues/471
-RUN ${CK_PYTHON} -m pip install --user llvmlite --prefer-binary
 # NB: tqdm is just a progress bar, can go?
-# NB: numba 0.48 is unavailable for Python 3.5, hence 0.47.
-RUN ${CK_PYTHON} -m pip install --user tqdm toml unidecode inflect sndfile librosa numba==0.47
+# NB: Fix numba version: https://github.com/librosa/librosa/issues/1160
+RUN ${CK_PYTHON} -m pip install --user tqdm toml unidecode inflect sndfile librosa numba==0.48
 #-----------------------------------------------------------------------------#
 
 
