--- a/docker/speech-recognition.rnnt/Dockerfile.debian-10
+++ b/docker/speech-recognition.rnnt/Dockerfile.debian-10
@@ -10,7 +10,7 @@ ENTRYPOINT ["/bin/bash", "-c"]
 
 # Install known system dependencies and immediately clean up to make the image smaller.
 # CK needs: git, wget, zip, unzip.
-# Speech Recognition program needs: sndfile-devel.
+# Speech Recognition program needs: sndfile (which in turn needs ffi).
 RUN apt update -y\
  && apt install -y apt-utils\
  && apt upgrade -y\
@@ -19,7 +19,7 @@ RUN apt update -y\
  gcc g++\
  make patch vim\
  git wget zip libz-dev\
- libsndfile1-dev\
+ libsndfile1-dev libffi-dev\
  && apt clean
 
 # Create non-root user.
